Added gulp boilerplate

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     
     <!--Notify CSS-->
-    <link rel="stylesheet" href="./dist/css/notify.css">
+    <link rel="stylesheet" href="./dist/css/notifyme.css">
     
     <!--Demo CSS-->
     <style>
@@ -178,7 +178,7 @@
 </body>
 
 <!--Notify JS-->
-<script src="./dist/js/notify.js" ></script>
+<script src="./dist/js/notifyme.js" ></script>
 
 <script>
  
