--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
     <h3>Customize</h3>
-    <p>You can customize duration, position, distance, z-index and a <strong>light theme</strong></p>
+    <p>You can customize duration, position, distance, z-index and a <strong>ligh theme</strong></p>
     <ol class="options">
         <li><span>timeout:</span> miliseconds</li>
         <li><span>positionY:</span> 'top' or 'bottom'</li>
@@ -98,7 +98,7 @@
             distanceY: 20, // Integer value
             distanceX: 20, // Integer value
             zIndex: 100, // Integer value
-            light: true // Light theme
+            ligh: true // Ligh theme
         };
         
     const myNotify = new Notifyme(config);
