--- a/index.html
+++ b/index.html
@@ -55,16 +55,15 @@
     </ol>
     <p>
 <pre>
-        const config = {
-            timeout: 5000,
-            positionY: "bottom", // top or bottom
-            positionX: "center", // right left, center
-            distanceY: 20, // Integer value
-            distanceX: 20, // Integer value
-            zIndex: 100, // Integer value
-            ligh: true // 'true' or 'false to set ligh theme
-        };
-
+const config = {
+    timeout: 5000,
+    positionY: "bottom", // top or bottom
+    positionX: "center", // right left, center
+    distanceY: 20, // Integer value
+    distanceX: 20, // Integer value
+    zIndex: 100, // Integer value
+    ligh: true // 'true' or 'false to set ligh theme
+};
 </pre></p>
 
 
@@ -76,7 +75,7 @@
 
 <script>
  function success () {
-        notifyme.success("This is a 'success' notification")
+        notifyme.success("This is a 'success' <a href='#'>Go to google</a> notification")
     }
 
     function error () {
