--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ const config = {
     //CUSTOMIZATION
 
     const config = {
-            timeout: 3000,
+            timeout: 13000,
             positionY: "top", // top or bottom
             positionX: "right", // right left, center
             distanceY: 20, // Integer value
@@ -103,7 +103,7 @@ const config = {
     const myToast = new Toastme(config);
 
     function successL () {
-        myToast.success("This is a 'success' notification")
+        myToast.success("tion")
     }
 
     function errorL () {
