--- a/index.html
+++ b/index.html
@@ -14,169 +14,7 @@
     <link rel="stylesheet" href="./dist/css/toastme.css">
     
     <!--Demo CSS-->
-    <style>
-        body {
-    color: #333;
-    text-align: center;
-    font-family: Roboto, sans-serif
-}
-
-h1 {
-    margin-top: 50px;
-    margin-bottom: 5px;
-    font-size: 30px;
-    font-weight: 400
-}
-
-h3 {
-    color: #737373;
-    font-size: 24px;
-    font-weight: 400;
-    margin-top: 10px;
-    margin-bottom: 20px
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 20px 0
-}
-
-.button {
-    cursor: pointer;
-    padding: 10px 25px;
-    box-shadow: none;
-    border: none;
-    margin-bottom: 10px;
-    min-width: 100px
-}
-
-.button.default {
-    color: #737373;
-    background-color: #f5f5f5
-}
-
-.button.success {
-    color: #fff;
-    background-color: #8bc34a
-}
-
-.button.error {
-    color: #fff;
-    background-color: #f44336
-}
-
-.button.warning {
-    color: #fff;
-    background-color: #ff9800
-}
-
-.button.info {
-    color: #fff;
-    background-color: #2196f3
-}
-
-.button.ligh {
-    color: #666;
-    background-color: #f5f5f5!important
-}
-
-
-.button.success.ligh {
-    color: #8bc34a;
-    background-color: #f5f5f5!important
-}
-
-.button.error.ligh {
-    color: #f44336;
-    background-color: #f5f5f5!important
-}
-
-.button.warning.ligh {
-    color: #ff9800;
-    background-color: #f5f5f5!important
-}
-
-.button.info.ligh {
-    color: #2196f3;
-    background-color: #f5f5f5!important
-}
-
-.button.dark {
-    color: #fff;
-    background-color: #252839!important
-}
-
-.button.success.dark {
-    color: #8bc34a;
-    background-color: #252839!important
-}
-
-.button.error.dark {
-    color: #f44336;
-    background-color: #252839!important
-}
-
-.button.warning.dark {
-    color: #ff9800;
-    background-color: #252839!important
-}
-
-.button.info.dark {
-    color: #2196f3;
-    background-color: #252839!important
-}
-
-pre {
-    max-width: 400px;
-    margin: 20px auto;
-    text-align: left;
-}
-
-.options {
-    text-align: left;
-    max-width: 400px;
-    margin: 20px auto
-}
-
-.options>li {
-    margin-bottom: 10px
-}
-
-.options span {
-    color: #737373;
-    font-weight: 600
-}
-
-.demos {
-    color: #737373;
-    max-width: 400px;
-    margin: 15px auto;
-    position: relative
-}
-
-.demos .list {
-    float: left;
-    width: 33.33%
-}
-
-.demos.dialog .list {
-    float: left;
-    width: 50%
-}
-
-.clearfix {
-    clear: both
-}
-
-@media(max-width:767px) {
-    .demos .list,
-    .demos.dialog .list {
-        float: unset;
-        width: 100%
-    }
-}
-    </style>
+    <style>body{color:#333;text-align:center;font-family:Roboto,sans-serif}h1{margin-top:50px;margin-bottom:5px;font-size:30px;font-weight:400}h3{color:#737373;font-size:24px;font-weight:400;margin-top:10px;margin-bottom:20px}ul{list-style:none;padding:0;margin:20px 0}.button{cursor:pointer;padding:10px 25px;box-shadow:none;border:none;margin-bottom:10px;min-width:100px}.button.default{color:#737373;background-color:#f5f5f5}.button.success{color:#fff;background-color:#8bc34a}.button.error{color:#fff;background-color:#f44336}.button.warning{color:#fff;background-color:#ff9800}.button.info{color:#fff;background-color:#2196f3}.button.ligh{color:#666;background-color:#f5f5f5!important}.button.success.ligh{color:#8bc34a;background-color:#f5f5f5!important}.button.error.ligh{color:#f44336;background-color:#f5f5f5!important}.button.warning.ligh{color:#ff9800;background-color:#f5f5f5!important}.button.info.ligh{color:#2196f3;background-color:#f5f5f5!important}.button.dark{color:#fff;background-color:#252839!important}.button.success.dark{color:#8bc34a;background-color:#252839!important}.button.error.dark{color:#f44336;background-color:#252839!important}.button.warning.dark{color:#ff9800;background-color:#252839!important}.button.info.dark{color:#2196f3;background-color:#252839!important}pre{max-width:400px;margin:20px auto;text-align:left}.options{text-align:left;max-width:400px;margin:20px auto}.options>li{margin-bottom:10px}.options span{color:#737373;font-weight:600}.demos{color:#737373;max-width:400px;margin:15px auto;position:relative}.demos .list{float:left;width:33.33%}.demos.dialog .list{float:left;width:50%}.clearfix{clear:both}@media(max-width:767px){.demos .list,.demos.dialog .list{float:unset;width:100%}}</style>
 
 </head>
 <body>
@@ -255,6 +93,7 @@ const config = {
                     <li><button type="button" class="button ligh" onclick="titleDialog()"> Title only </button></li>
                     <li><button type="button" class="button ligh" onclick="textDialog()"> Text only </button></li>
                     <li><button type="button" class="button ligh" onclick="emptyDialog()"> Without title and text </button></li>
+                    <li><button type="button" class="button dark" onclick="successDialogD()"> Dark theme dialog :O</button></li>
                 </ul>
             </div>
         <div class="list">
@@ -280,6 +119,7 @@ const config = {
     <li><span>textCancel:</span> cancel button caption</li>
     <li><span>showCancel:</span> Show cancel button? 'true' or 'false'</li>
     <li><span>type:</span> select 'success', 'danger', 'warning', 'info' or 'question'</li>
+    <li><span>dark:</span> Show dark theme? 'true' or 'false'</li>
 </ol>
 <p>
 <pre>
@@ -361,7 +201,7 @@ const config = {
 
 
     const configDark = {
-        timeout: 13000,
+        timeout: 3000,
         positionY: "top", // top or bottom
         positionX: "center", // right left, center
         distanceY: 20, // Integer value
@@ -484,9 +324,20 @@ const config = {
     }
 
 
-
-
-
+    function successDialogD () {
+        toastme.yesNoDialog({
+            title: "This is the dark theme",
+            text: "Do you like it?",
+            textConfirm: "Yes, I love it!",
+            textCancel: "I'm scared :(",
+            showCancel: true,
+            dark: true
+        }).then(function(value) {
+            if (value) {
+                myToastDark.success("You are so dark :O")
+            }
+        });
+    }
 
 
 
