fix notification description

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ const config = {
     const myToast = new Toastme(config);
 
     function defaultL () {
-        myToast.default("This is a 'success' notification")
+        myToast.default("This is a 'default' notification")
     }
 
     function successL () {
