--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
 
     <!--Toastme CSS-->
-    <link rel="stylesheet" href="./dist/css/toastme.css">
+    <link rel="stylesheet" href="./dist_dev/css/toastme.css">
 
     <!--Demo CSS-->
     <style>
@@ -349,7 +349,7 @@ toastme.yesNoDialog({
 </body>
 
 <!--toastme JS-->
-<script src="./dist/js/toastme.js"></script>
+<script src="./dist_dev/js/toastme.js"></script>
 
 <script>
     //TOASTME
