CSS Rules fixes and updates

--- a/index.html
+++ b/index.html
@@ -10491,6 +10491,7 @@ var lighNotificationsConfig = {
   positionY: "top",
   // top or bottom
   positionX: "center",
+  timeout: 150000,
   // right left, center
   theme: "ligh", // default, ligh or  dark (leave empty for "default" theme)
   duplicates: true
