--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/atelier-cave-dark.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
 
-  <link rel="stylesheet" href="./dist/css/toastme.css">
-  <script src="./dist/js/toastme.min.js"></script>
+  <link rel="stylesheet" href="./dist_dev/css/toastme.css">
+  <script src="./dist_dev/js/toastme.min.js"></script>
 
   <title>ToastmeJS - Notifications and Dialogs for your website.</title>
 <style>
@@ -10657,7 +10657,8 @@ function defaultDialogs(param) {
         textConfirm: "Confirm delete",
         textCancel: "Cancel",
         showCancel: true,
-        type: "danger"
+        type: "danger",
+        animations: false
       }).then(function (value) {
         if (value) {
           toastme.error("You have deleted");
