--- a/index.html
+++ b/index.html
@@ -10526,7 +10526,7 @@ function lighNotifications(param) {
 }
 
 var darkNotificationsConfig = {
-  animations: false,
+  animations: true,
   positionY: "top",
   positionX: "right",
   theme: "dark"
