--- a/index.html
+++ b/index.html
@@ -10488,12 +10488,11 @@ toastme.yesNoDialog({
 }
 
 var lighNotificationsConfig = {
-  positionY: "top",
-  // top or bottom
-  positionX: "center",
-  // right left, center
+  positionY: "top", // top or bottom
+  positionX: "center", // right left, center
   theme: "ligh", // default, ligh or  dark (leave empty for "default" theme)
-  duplicates: true
+  duplicates: true,
+  timeout: 50000
 
 };
 var lighToast = new Toastme(lighNotificationsConfig);
