--- a/index.html
+++ b/index.html
@@ -10456,6 +10456,7 @@ toastme.yesNoDialog({
                     <li><strong>showCancel:</strong> Show cancel button? 'true' or 'false'</li>
                     <li><strong>type:</strong> select 'success', 'danger', 'warning', 'info' or 'question'</li>
                     <li><strong>dark:</strong> Show dark theme? 'true' or 'false'</li>
+                    <li><strong>animations:</strong> Show animations? It's true by default</li>
                 </ol>
               </div>
             </div>
