Typescript: update gulp file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
 
   <link rel="stylesheet" href="./dist_dev/css/toastme.css">
-  <script src="./dist_dev/js/index.js"></script>
+  <script src="./dist_dev/js/toastme.js"></script>
 
   <title>ToastmeJS - Notifications and Dialogs for your website.</title>
 <style>
