Hotfix: Remove deprecated browserList config

--- a/index.html
+++ b/index.html
@@ -10234,7 +10234,7 @@ toastme.info("This is an 'info' notification")</code>
         </div>
         <div class="col-sm-4">
           <div class="section-content">
-            <img src="./demo/pic-notifications.png" class="img-fluid center-block shadow" alt="Dialogs">
+            <img src="./demo/pic-notifications.png" class="shadow img-fluid center-block" alt="Dialogs">
           </div>
         </div>
       </div>
@@ -10297,7 +10297,7 @@ toastme.info("This is an 'info' notification")</code>
       <div class="row">
           <div class="col-sm-6">
             <div class="section-content">
-              <div class="card shadow">
+              <div class="shadow card">
                 <div class="card-header">Notification Example</div>
                 <div class="card-body">
 <pre>
@@ -10366,7 +10366,7 @@ mytoast.success("Hello, this is my custom notification!");
         </div>
         <div class="col-sm-4">
           <div class="section-content">
-            <img src="./demo/pic-dialogs.png" class="img-fluid center-block shadow" alt="Dialogs">
+            <img src="./demo/pic-dialogs.png" class="shadow img-fluid center-block" alt="Dialogs">
           </div>
         </div>
       </div>
@@ -10416,7 +10416,7 @@ mytoast.success("Hello, this is my custom notification!");
         <div class="row">
             <div class="col-sm-6">
               <div class="section-content">
-                <div class="card shadow">
+                <div class="shadow card">
                   <div class="card-header">Dialog Example</div>
                   <div class="card-body">
 <pre>
